--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+title: "Petrified voices"
+description: "Petra's personal research on why people created thousands messages written into stone and what can we learn from them"
+
 ---
 <div class="home">
 
