--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Petrified voices"
+title: "Petrified voices test"
 description: "Petra's personal research on why people created thousands messages written into stone and what can we learn from them"
 
 ---
