--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: "Petrified voices test"
+title: Petrified voices test
 description: "Petra's personal research on why people created thousands messages written into stone and what can we learn from them"
-
 ---
 <div class="home">
 
